--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { Image } from 'astro:assets';
 import myImage from '../images/icon.png';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Masayuki Tanenobu">
 	<main>
 		<div class="flex flex-wrap justify-center my-8">
 			<Image src={myImage} alt="profile" width={128} height={128} class="shadow rounded-full max-w-full h-auto align-middle border-none" />
