📦 chore(package.json): add "@iconify-json/entypo-social" package as a dependency 🎨 style(Links.astro): add a new link with the title "mixi" and the URL "https://mixi.jp/show_profile.pl?id=67379023" with the icon "entypo-social:mixi"

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -72,6 +72,11 @@ const links = [
         title: 'Nostr',
         url: 'https://nostr.com/npub1nca6cct4ce6zhm5mxhufqjym696jdlyr6h7zq76fqlw5p0gnnyus35j2v3',
         icon: 'game-icons:ostrich'
+    },
+    {
+        title: 'mixi',
+        url: 'https://mixi.jp/show_profile.pl?id=67379023',
+        icon: 'entypo-social:mixi'
     }
 ]
 ---
