🔧 chore(astro.config.mjs): add site URL to astro.config.js to specify the site URL for SEO purposes 🔧 chore(package.json): add astro-seo package to package.json to enable SEO functionality in the project 📝 docs(Layout.astro): remove imageUrl prop from Layout component and update meta tags to use Astro.url and Astro.site 📝 docs(index.astro): remove imageUrl prop from Layout component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { Image } from 'astro:assets';
 import myImage from '../images/icon.png';
 ---
 
-<Layout title="Masayuki Tanenobu" description="私です。" imageUrl="mtane0412.me.webp">
+<Layout title="Masayuki Tanenobu" description="私です。">
 	<main>
 		<div class="flex flex-wrap justify-center my-8">
 			<Image src={myImage} alt="profile" width={128} height={128} class="shadow rounded-full max-w-full h-auto align-middle border-none" />
