--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,19 @@
 ---
+import { SEO } from "astro-seo";
+
+const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
+
+const resolvedImageWithDomain = new URL(
+  "/opengraph.webp",
+  Astro.site
+).toString();
+
 interface Props {
 	title: string;
 	description: string;
-	imageUrl: string;
 }
 
-const { title, description, imageUrl } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
@@ -19,18 +27,25 @@ const { title, description, imageUrl } = Astro.props;
 		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
 		<link rel="manifest" href="favicon/site.webmanifest">
 		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-		<meta property="og:title" content={title} />
-		<meta property="og:type" content="website" />
-		<meta property="og:image" content={Astro.url + imageUrl} />
-		<meta property="og:url" content={Astro.url} />
-		<meta property="og:description" content={description} />
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:site" content="@mtane0412" />
-		<meta name="twitter:title" content={title} />
-		<meta name="twitter:description" content={description} />
-		<meta name="twitter:image" content={Astro.url + imageUrl} />
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
+		<SEO
+			title={title}
+			description={description}
+			canonical={canonicalURL}
+			openGraph={{
+				basic: {
+					title: title,
+					type: "website",
+					image: resolvedImageWithDomain,
+				}
+			}}
+			twitter={{
+				creator: "@mtane0412",
+				site: "@mtane0412",
+        		card: "summary_large_image",
+			}}
+	  	/>
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
