🔀 chore(Links.astro): remove unused imports and image variable to improve code cleanliness ✨ feat(Links.astro): add Duolingo link with corresponding icon to the list of links

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -1,7 +1,5 @@
 ---
 import { Icon } from 'astro-icon/components';
-import { Image } from 'astro:assets';
-import cardImage from '../images/card-top.jpg';
 const links = [
     {
 		title: 'Twitter',
@@ -77,6 +75,11 @@ const links = [
         title: 'mixi',
         url: 'https://mixi.jp/show_profile.pl?id=67379023',
         icon: 'entypo-social:mixi'
+    },
+    {
+        title: 'Duolingo',
+        url: 'https://www.duolingo.com/profile/mtane0412',
+        icon: 'simple-icons:duolingo'
     }
 ]
 ---
