🔧 chore(astro.config.mjs): add partytown integration to support Google Analytics tracking 📦 chore(package.json): add @astrojs/partytown as a dependency 🔧 chore(Layout.astro): add Google Analytics tracking code using partytown integration

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,6 +48,15 @@ const { title, description } = Astro.props;
 	  	/>
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<!-- Google tag (gtag.js) -->
+		<script async type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-YD0ZZJM036"></script>
+		<script type="text/partytown">
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-YD0ZZJM036');
+		</script>
 	</head>
 	<body>
 		<slot />
